fix: [Transfer] The box-shadow of the bottom button is not visible

--- a/components/transfer/style/index.less
+++ b/components/transfer/style/index.less
@@ -217,7 +217,6 @@
     flex-direction: column;
     align-self: center;
     margin: 0 8px;
-    overflow: hidden;
     vertical-align: middle;
 
     .@{ant-prefix}-btn {
